RESOLVED FIXED240569
MediaStreamTrack.getConstraints is empty object
https://bugs.webkit.org/show_bug.cgi?id=240569
Summary MediaStreamTrack.getConstraints is empty object
Arjun Vade
Reported 2022-05-18 03:55:21 PDT
Created attachment 459533 [details] reprodicble test case Steps to reproduce: - Open the attached html file in safari browser - Click on the button - Notice `{}` is printed below the first video element. It should not be empty The html file invokes getDisplayMedia and then does track.getConstraints() on the resultant track.
Attachments
reprodicble test case (1.27 KB, text/html)
2022-05-18 03:55 PDT, Arjun Vade
no flags
Radar WebKit Bug Importer
Comment 1 2022-05-19 06:10:19 PDT
EWS
Comment 2 2022-05-30 09:48:51 PDT
Committed r295031 (251126@main): <https://commits.webkit.org/251126@main> Reviewed commits have been landed. Closing PR #778 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.