MediaStreamTrack.getConstraints is empty object https://bugs.webkit.org/show_bug.cgi?id=240569

Patch by Youenn Fablet <youennf@gmail.com> on 2022-05-30
Reviewed by Eric Carlson.

Cover audio and video constraints in UserMediaRequest.
Set these constraints on the created tracks at promise resolution time.

Make a refactoring to move from using RefPtr<MediaStreamTrack> to Ref<MediaStreamTrack>.
Remove use of MediaStream::getTracks since it is not efficient.

Covered by updated tests.

* Source/WebCore/Modules/mediastream/MediaDevices.cpp:
(WebCore::MediaDevices::getUserMedia):
(WebCore::MediaDevices::getDisplayMedia):
* Source/WebCore/Modules/mediastream/MediaDevices.h:
* Source/WebCore/Modules/mediastream/MediaStream.cpp:
(WebCore::MediaStream::MediaStream):
(WebCore::MediaStream::clone):
(WebCore::MediaStream::getTrackById):
(WebCore::MediaStream::getFirstAudioTrack const):
(WebCore::MediaStream::getFirstVideoTrack const):
(WebCore::MediaStream::getTracks const):
(WebCore::MediaStream::internalAddTrack):
(WebCore::MediaStream::internalTakeTrack):
(WebCore::MediaStream::mediaState const):
(WebCore::MediaStream::updateActiveState):
(WebCore::MediaStream::filteredTracks const):
* Source/WebCore/Modules/mediastream/MediaStream.h:
* Source/WebCore/Modules/mediastream/MediaStreamTrack.h:
(WebCore::MediaStreamTrack::setConstraints):
* Source/WebCore/Modules/mediastream/UserMediaRequest.cpp:
(WebCore::UserMediaRequest::create):
(WebCore::UserMediaRequest::UserMediaRequest):
(WebCore::UserMediaRequest::allow):
* Source/WebCore/Modules/mediastream/UserMediaRequest.h:
* LayoutTests/fast/mediastream/getDisplayMedia-max-constraints3.html:
* LayoutTests/fast/mediastream/getUserMedia-webaudio.html:
* LayoutTests/fast/mediastream/mediastreamtrack-video-clone.html:

Canonical link: https://commits.webkit.org/251126@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295031 268f45cc-cd09-0410-ab3c-d52691b4dbfc