Source/WebCore/Modules/mediastream/MediaStreamTrack.h
@@ -136,10 +136,12 @@ public:
     TrackCapabilities getCapabilities() const;
 
     const MediaTrackConstraints& getConstraints() const { return m_constraints; }
+    void setConstraints(MediaTrackConstraints&& constraints) { m_constraints = WTFMove(constraints); }
     void applyConstraints(const std::optional<MediaTrackConstraints>&, DOMPromiseDeferred<void>&&);
 
     RealtimeMediaSource& source() const { return m_private->source(); }
     MediaStreamTrackPrivate& privateTrack() { return m_private.get(); }
+    const MediaStreamTrackPrivate& privateTrack() const { return m_private.get(); }
 
     RefPtr<WebAudioSourceProvider> createAudioSourceProvider();
 
@@ -211,7 +213,7 @@ private:
     bool m_isInterrupted { false };
 };
 
-typedef Vector<RefPtr<MediaStreamTrack>> MediaStreamTrackVector;
+typedef Vector<Ref<MediaStreamTrack>> MediaStreamTrackVector;
 
 } // namespace WebCore
 
